# cake-notify

./: .gitignore  Cargo.toml  build.sh  deploy.sh  docker-compose.yml  lambda_function.py  main.tf  outputs.tf  requirements.txt  terraform.tfvars  variables.tf  設計書.md
.github/workflows/: ci.yml  deploy.yml  pytest.yml  terraform_apply.yml  terraform_plan.yml
lambda/: .gitignore  lambda_function.py  make_zip.sh  requirements.txt
lambda/tests/: test_lambda_function.py
src/: db.rs  main.rs  sheets.rs
terraform/: main.tf  outputs.tf  variables.tf
