[package]
name = "cake-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serenity = "0.12"
google-sheets4 = { version = "4.0", features = ["hyper-rustls"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
dotenv = "0.15"
yup-oauth2 = { version = "7.0", features = ["service-account"] }
